# comp_sys_progr_pers

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  modules.zig
ch_1/: print_bytes.c  print_bytes.zig
ch_2/: byte_rep.c  pp_2_10.c  pp_2_11_bug.c  pp_2_11_fix.c  pp_2_12.c  pp_2_5.c  pp_2_7.c  utils.c  utils.h
examples/ch00/: hello_world_c.c  hello_world_zig.zig
lib/: time.c  time.h
module/: time.zig
src/app/: main.zig
